--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>To-Do List <img src="images/todolistIcon.png" alt="To-Do List app icon"></h2>
+            <h2>To-Do List <img src="images/icon.png" alt="To-Do List app icon"></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Type your text">
+                <button>Add</button>
+            </div>
         </div>
     </div>
 </body>
